Working on the footer component

--- a/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
+++ b/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
@@ -1,1 +1,29 @@
-This is the Footer Component!
+<div class="logo">
+    GradeCalculator
+</div>
+
+<div class="links container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Calculator Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Courses</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">My Profile</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+<div class="social-links container-fluid">
+
+</div>
+
+<div class="misc-links container-fluid">
+
+</div>
