--- a/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
+++ b/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class = "footer">
+<div class = "row footer justify-content-center">
 
-    <div class="logo justify-content-center">
+    <div class="logo">
         GradeCalculator
     </div>
     
