Attempt at content justify center

--- a/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
+++ b/CS230_Group12/src/app/Layouts/Home Page/Footer/footer.component.html
@@ -5,21 +5,23 @@
     </div>
     
     <div class="links container-fluid">
-        <nav class="navbar navbar-expand-lg">
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Calculator Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Courses</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">My Profile</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class = "row justify-content-center">
+            <nav class="navbar navbar-expand-lg">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Calculator Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">My Profile</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     
     <div class="social-links container-fluid">
