--- a/CS230_Group12/src/app/Layouts/Home Page/Header/header.component.html
+++ b/CS230_Group12/src/app/Layouts/Home Page/Header/header.component.html
@@ -8,10 +8,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Calculator Home</a>
+                    <a routerLink='Calculator' class="nav-link" href="#">Calculator Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Courses</a>
+                    <a routerLink='Course' class="nav-link" href="#">Courses</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">
